fix upgrade sql error, stats improvment

--- a/views/css/tab.css
+++ b/views/css/tab.css
@@ -1,1 +1,1 @@
-.icon-AdminSuperAbandonedCart:before, .icon-AdminSuperAbandonedCart:before{content: "\f07a";}
+.icon-AdminSuperAbandonedCartDefault::before, .icon-AdminSuperAbandonedCartDefault::before{content: "\f07a";}
